--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -8,6 +8,20 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
+	<script type="text/javascript">
+		function test(){
+			var title = document.getElementById("title").value;
+			var body = document.getElementById("inputlg").value;
+			if(!title || !body){
+				console.log("empty fields");
+				alert("Fields cannot be empty!");
+				return false;
+
+		}
+			}
+	</script>
+
+
 </head>
 <body>
 		<nav class="navbar navbar-default">
@@ -23,10 +37,10 @@
   </div>
 </nav>
 	<h2>Create an awesome blog...</h2>
-	<form method="POST" action="/upload">
+	<form method="POST" action="/upload" id="myform" onsubmit="return test();">
 	<div class="form-group">
 		<p><u>Title</u></p>
-		<input class="form-control" id="tite" type="text" name="title" style="width: 60%;margin-left:20%;font-size: 25px;"><br>
+		<input class="form-control" id="title" type="text" name="title" style="width: 60%;margin-left:20%;font-size: 25px;"><br>
 	</div>
 	<div class="form-group" >
 		<p><u>What do you wanna write about today?</u></p>
@@ -34,10 +48,6 @@
 	</div>
 		<input class="btn btn-default" type="submit" value="Upload" style="font-size: 30px;background-color: lightgreen;color:white;margin-bottom: 25px;">
 	</form>
-	<script type="text/javascript">
-		if(document.getElementById("title").value==null)
-			alert("No title");
-	</script>
-
+	
 </body>
 </html>
