--- a/views/error.ejs
+++ b/views/error.ejs
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-	<h1>A blog with title <strong><i>"<%= data.title %>"</i></strong> already exists! Please try again.</h1>
+	<h1>A blog with title <span style="color: #333333"><i>"<%= data.title %>"</i></span> already exists! Please try again.</h1>
 	<div id="buttons">
 		<a href="/home"><button type="button" class="btn btn-success">Home</button></a>
 		<a href="/upload"><button type="button" class="btn btn-success">Upload</button></a>
