--- a/views/blogmain.ejs
+++ b/views/blogmain.ejs
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+	<div id="body">
 	<nav class="navbar navbar-default">
   <div class="container-fluid" style="font-size: 23px;">
     <div class="navbar-header">
@@ -34,5 +35,7 @@
 		 <p><%= arr[i]; %> </p>
 	<% } %>
 <!---	<p style="max-width: 100%;"><%= data.body %><p> -->
+
+</div>
 </body>
 </html>
